# MeshTTY

./: .gitignore  README.md  fix-meshtastic-proto.sh  fix-python311.sh  install-pi.sh  install.sh  launch-pi.sh  launch.sh  meshtty-crt.sh  meshtty.sh  pyproject.toml  requirements.txt  update.sh
assets/: meshclaude.tcss  meshtty.tcss
assets/crt-profiles/: meshtty-amber.json  meshtty-phosphor.json  meshtty-zero.json
meshclaude/: main.py
meshclaude/bridge/: event_bridge.py
meshclaude/config/: settings.py
meshclaude/db/: database.py
meshclaude/screens/: connection.py  main_screen.py  messages.py  nodes.py  settings.py
meshclaude/transport/: ble_transport.py  discovery.py  serial_transport.py  tcp_transport.py
meshclaude/widgets/: channel_list.py  compose_bar.py  status_bar.py
meshtty/: main.py  message_log.py  themes.py
meshtty/bridge/: event_bridge.py
meshtty/commands/: command_handler.py
meshtty/config/: settings.py
meshtty/db/: database.py
meshtty/messages/: app_messages.py
meshtty/screens/: channels.py  connection.py  help_modal.py  main_screen.py  messages.py  node_detail.py  nodes.py  settings.py
meshtty/transport/: base.py  ble_transport.py  serial_transport.py  tcp_transport.py
meshtty/widgets/: channel_list.py  compose_bar.py  cycle_select.py  message_view.py  node_table.py  status_bar.py  terminal_frame.py
